Bug 1167541 - Implemented  SpeechSynthesisEvent::utterance. r=smaug